--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ include(${ROOT_USE_FILE})
 set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/Converters
+  ${CMAKE_SOURCE_DIR}/macros
   ${ROOT_INCLUDE_DIRS}
 )
 
@@ -53,3 +54,4 @@ G__ModelTree.cxx)
 target_link_libraries(ModelTree ${ROOT_LIBRARIES})
 
 add_subdirectory(Converters)
+add_subdirectory(macros)
