--- a/src/EventSelector/CMakeLists.txt
+++ b/src/EventSelector/CMakeLists.txt
@@ -1,6 +1,19 @@
-#---Make all the executables for data conversion
-add_executable(urqmd2tc urqmd2tc.cxx)
-target_link_libraries(urqmd2tc ModelTree)
+set(MTEventSelector_headers_files
+  MTEventSelector.h
+)
 
-add_executable(uioqgsm2tc uioqgsm2tc.cxx)
-target_link_libraries(uioqgsm2tc ModelTree)
+set(MTEventSelector_cxx_files
+  MTEventSelector.cxx
+)
+
+#---Generate dictionary for MTEventSelector
+ROOT_GENERATE_DICTIONARY(G__MTEventSelector
+  ${MTEventSelector_headers_files}
+LINKDEF MTEventSelector.LinkDef.h)
+
+#---Create a shared library with geneated dictionary for MTEventSelector class
+add_library(MTEventSelector SHARED
+  ${MTEventSelector_cxx_files}
+G__MTEventSelector.cxx)
+
+target_link_libraries(MTEventSelector ${ROOT_LIBRARIES})
